manifests/istio-ingress/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: default
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - hosts:
        - "*"
      port:
        name: https
        number: 8443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: gateway-tls
    - hosts:
      - "*"
      port:
        name: http
        number: 8080
        protocol: HTTP2
      tls:
        httpsRedirect: true
